--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <button id="add-btn">Add To List</button>
       <ul id="to-do-things"></ul>
     </div>
+    <div class="footer">
+      <p>Made With 💙 By Bryan. April 17th 2023 &copy;Wooplus</p>
+    </div>
     <script src="script.js" type="module"></script>
   </body>
 </html>
