--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;1,200&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500;700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -27,7 +29,7 @@
       <ul id="to-do-things"></ul>
     </div>
     <div class="footer">
-      <p>Made With 💙 By Bryan. April 17th 2023 &copy;Wooplus</p>
+      <p>Made With 💙 By Bryan. April 17th 2023 &copy; Wooplus</p>
     </div>
     <script src="script.js" type="module"></script>
   </body>
